# RtCXX

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: rtcxx-generator.cmake
rtcxx-generator/: CMakeLists.txt  Main.cpp  Property.h  ReflMatchFinder.h  config_llvm_refl_generator_cmake_vc16.py  config_llvm_refl_generator_cmake_vc17.py  llvm-clang-tools-extra.CMakeLists.txt
src/: AngelScripAddons.cpp  Cast.h  Fwd.h  GeneratorSupport.cpp  GeneratorSupport.h  MetaClass.cpp  MetaClass.h  MetaFunction.cpp  MetaFunction.h  MetaProperty.cpp  MetaProperty.h  MetaStruct.cpp  MetaStruct.h  Metadata.cpp  Metadata.h  Object.cpp  Object.h  RtCXX.cpp  RtCXX.h
src/Templates/: BytesToSizeType.h  FunctionTraits.h  IsArray.h  IsReference.h  IsVector.h  Null.h  ReferenceController.cpp  ReferenceController.h  SharedObjectPtr.h  WeakObjectPtr.h
test/: TestScriptEngine.cpp  TestScriptEngine.h  TestSharedObjectPtr.h  main.cpp
